feat: 权限相关基础接口开发
