# docs/swagger.json
@@ -3455,6 +3455,59 @@
                 }
             }
         },
+        "/v1/voyager1/auth/getMenusByRoleIds": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authority"
+                ],
+                "summary": "通过用户角色信息获取菜单列表",
+                "parameters": [
+                    {
+                        "description": "权限ids",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetMenusByRoleIds"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "创建角色,返回包括系统角色详情",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.Vo1MenusResponse"
+                                        },
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/v1/voyager1/auth/getPolicyPathByAuthorityId": {
             "post": {
                 "security": [
@@ -3731,59 +3784,6 @@
                 }
             }
         },
-        "/v1/voyager1/role/getMenusByRoleIds": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Authority"
-                ],
-                "summary": "通过用户角色信息获取菜单列表",
-                "parameters": [
-                    {
-                        "description": "权限ids",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.GetAuthorityId"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "创建角色,返回包括系统角色详情",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/response.Vo1MenusResponse"
-                                        },
-                                        "msg": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
         "/weather/getInfo": {
             "get": {
                 "produces": [
@@ -3888,6 +3888,38 @@
                     "type": "string"
                 },
                 "expose-headers": {
+                    "type": "string"
+                }
+            }
+        },
+        "config.Cache": {
+            "type": "object",
+            "properties": {
+                "addr": {
+                    "description": "单机地址",
+                    "type": "string"
+                },
+                "addrs": {
+                    "description": "集群地址",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "master-name": {
+                    "description": "哨兵MasterName",
+                    "type": "string"
+                },
+                "options": {
+                    "description": "0(单机)1(集群)",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
@@ -4202,6 +4234,10 @@
                 "auth-key": {
                     "$ref": "#/definitions/config.AUTHKey"
                 },
+                "cache": {
+                    "description": "cache",
+                    "$ref": "#/definitions/config.Cache"
+                },
                 "casbin": {
                     "$ref": "#/definitions/config.Casbin"
                 },
@@ -4392,7 +4428,7 @@
                     "type": "string"
                 },
                 "use-cache": {
-                    "description": "使用redis",
+                    "description": "使用cache",
                     "type": "boolean"
                 },
                 "use-database": {
@@ -4400,7 +4436,7 @@
                     "type": "boolean"
                 },
                 "use-multipoint": {
-                    "description": "多点登录拦截",
+                    "description": "多点登录",
                     "type": "boolean"
                 }
             }
@@ -4642,6 +4678,17 @@
                 "id": {
                     "description": "主键ID",
                     "type": "string"
+                }
+            }
+        },
+        "request.GetMenusByRoleIds": {
+            "type": "object",
+            "properties": {
+                "roleIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
